tests/test_typing/bad/err6.catala_en
> Include: common.catala_en

```catala-metadata
declaration scope S2:
  sub scope S
  internal r content boolean
  output a content Enum
```

```catala
scope S:
  definition z equals [
    Structure { -- i: 3 -- e: Int content x };
    Structure { -- i: 4 -- e: y };
    Structure { -- i: 5 -- e: Dat content |1970-01-01| }
  ]
  definition a equals decimal of (number of (z ++ z)) / 2.

scope S2:
  definition sub.x equals 44.
  definition sub.y equals Int content 44
  rule r under condition exists x among sub.z such that x.e with pattern Int
    consequence fulfilled
  definition a equals if r then Int content (number of sub.z) else Dec content 0.0
```

Should be "catala Typecheck", see test err3

```catala-test-inline
$ catala ocaml
[ERROR]
Error during typechecking, incompatible types:
┌─⯈ decimal
└─⯈ integer

Error coming from typechecking the following expression:
┌─⯈ tests/test_typing/bad/err6.catala_en:20.27-20.30:
└──┐
20 │   definition sub.x equals 44.
   │                           ‾‾‾

Type decimal coming from expression:
┌─⯈ tests/test_typing/bad/err6.catala_en:20.27-20.30:
└──┐
20 │   definition sub.x equals 44.
   │                           ‾‾‾

Type integer coming from expression:
┌─⯈ tests/test_typing/bad/common.catala_en:12.19-12.26:
└──┐
12 │   input x content integer
   │                   ‾‾‾‾‾‾‾
#return code 123#
```
